--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-<h1>this is just a practise account</h1>
+<h1>this is just a practise account for my github course</h1>
 
 </body>
 </html>
