--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <h1>this is just a practise account for my github course</h1>
-
+<h2>i will surelly become good at devops ha ha ha</h2>
 </body>
 </html>
